--- a/Proj/code/LS/LSApp/mainwindow.ui
+++ b/Proj/code/LS/LSApp/mainwindow.ui
@@ -75,8 +75,12 @@
        <string notr="true">color: rgb(238, 238, 236);</string>
       </property>
       <property name="text">
-       <string>Find out how to display your ads with
- an aroma twist in https://mdo.pt</string>
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:14pt; font-weight:600; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Find out how to display your ads with &lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;an aroma twist in &lt;a href=&quot;https://mdo.pt&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;https://mdo.pt&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -136,6 +140,102 @@ background-image: url(:/resources/img/welcome.png);</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QWidget" name="horizontalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>980</y>
+        <width>571</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="toolTip">
+          <string>Dummy button to navigate to Normal mode view</string>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+border: 1px solid rgb(193, 125, 17)
+/*border-color: rgb(193, 125, 17);
+border-radius: 5px
+*/</string>
+         </property>
+         <property name="text">
+          <string>Normal</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="toolTip">
+          <string>Dummy button to navigate to Interaction mode view</string>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+border: 1px solid rgb(193, 125, 17)
+/*border-color: rgb(193, 125, 17);
+border-radius: 5px
+*/</string>
+         </property>
+         <property name="text">
+          <string>Interaction</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="toolTip">
+          <string>Dummy button to navigate to ImgFilter mode view</string>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+border: 1px solid rgb(193, 125, 17)
+/*border-color: rgb(193, 125, 17);
+border-radius: 5px
+*/</string>
+         </property>
+         <property name="text">
+          <string>ImgFilter</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_4">
+         <property name="toolTip">
+          <string>Dummy button to navigate to Sharing mode view</string>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+border: 1px solid rgb(193, 125, 17)
+/*border-color: rgb(193, 125, 17);
+border-radius: 5px
+*/</string>
+         </property>
+         <property name="text">
+          <string>Sharing</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QPlainTextEdit" name="plainTextEdit">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>820</y>
+        <width>421</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="plainText">
+       <string>aaaaa</string>
       </property>
      </widget>
     </widget>
