--- a/Proj/code/LS/LSApp/interwindow.ui
+++ b/Proj/code/LS/LSApp/interwindow.ui
@@ -26,7 +26,7 @@
     <string notr="true">background-color: rgb(0, 0, 0);</string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="main">
     <widget class="QWidget" name="horizontalLayoutWidget">
@@ -88,7 +88,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -143,7 +142,6 @@ Filter</string>
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -198,7 +196,6 @@ Pic</string>
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -253,7 +250,6 @@ GIF</string>
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -267,7 +263,6 @@ GIF</string>
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -294,7 +289,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -304,6 +298,9 @@ background-repeat: no-repeat;
        </widget>
       </item>
      </layout>
+     <zorder>label_3</zorder>
+     <zorder>label_6</zorder>
+     <zorder>label</zorder>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_4">
      <property name="geometry">
@@ -320,7 +317,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -334,7 +330,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -361,7 +356,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -389,7 +383,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -403,7 +396,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -430,7 +422,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -440,6 +431,9 @@ background-repeat: no-repeat;
        </widget>
       </item>
      </layout>
+     <zorder>label_38</zorder>
+     <zorder>label_39</zorder>
+     <zorder>label_37</zorder>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_6">
      <property name="geometry">
@@ -482,7 +476,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -536,7 +529,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -590,7 +582,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -604,7 +595,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -631,7 +621,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -670,7 +659,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -684,7 +672,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -721,7 +708,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -765,7 +751,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -823,7 +808,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -880,7 +864,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -897,7 +880,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -929,7 +911,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -939,6 +920,9 @@ background-repeat: no-repeat;
        </widget>
       </item>
      </layout>
+     <zorder>label_47</zorder>
+     <zorder>label_48</zorder>
+     <zorder>label_46</zorder>
     </widget>
    </widget>
   </widget>
@@ -973,7 +957,6 @@ background-repeat: no-repeat;
    <property name="font">
     <font>
      <pointsize>24</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
