--- a/Proj/code/LS/LSApp/normalwindow.ui
+++ b/Proj/code/LS/LSApp/normalwindow.ui
@@ -22,6 +22,9 @@
      <height>1024</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);</string>
+   </property>
   </widget>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
