--- a/Proj/code/LS/LSApp/resources.qrc
+++ b/Proj/code/LS/LSApp/resources.qrc
@@ -14,5 +14,8 @@
         <file>resources/icons/share.png</file>
         <file>resources/icons/cancel.png</file>
         <file>resources/icons/finger_pointing_inverted.png</file>
+        <file>resources/icons/swipe_right_inverted.png</file>
+        <file>resources/icons/swipe_left_inverted.png</file>
+        <file>resources/style/stylesheet.qss</file>
     </qresource>
 </RCC>
