--- a/Proj/code/LS/LSApp/sharwindow.ui
+++ b/Proj/code/LS/LSApp/sharwindow.ui
@@ -26,7 +26,7 @@
     <string notr="true">background-color: rgb(0, 0, 0);</string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="main">
     <widget class="QWidget" name="horizontalLayoutWidget">
@@ -72,7 +72,7 @@ border-radius: 5px
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <item>
-       <widget class="QPushButton" name="pb_img_filt">
+       <widget class="QPushButton" name="pb_cancel_share">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -88,7 +88,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -126,7 +125,7 @@ border-radius: 5px
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_take_pic">
+       <widget class="QPushButton" name="pb_twitter_share">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -142,7 +141,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -193,12 +191,17 @@ border-radius: 5px
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="label">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(186, 189, 182);</string>
         </property>
         <property name="text">
          <string>Choose: Hover over the option with:</string>
@@ -210,7 +213,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -237,7 +239,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -247,6 +248,9 @@ background-repeat: no-repeat;
        </widget>
       </item>
      </layout>
+     <zorder>label_3</zorder>
+     <zorder>label_6</zorder>
+     <zorder>label</zorder>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_4">
      <property name="geometry">
@@ -263,7 +267,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -277,7 +280,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -304,7 +306,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -316,7 +317,7 @@ background-repeat: no-repeat;
      </layout>
     </widget>
    </widget>
-   <widget class="QWidget" name="pic_opts">
+   <widget class="QWidget" name="edit_opts">
     <widget class="QWidget" name="horizontalLayoutWidget_5">
      <property name="geometry">
       <rect>
@@ -332,7 +333,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -346,7 +346,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -373,7 +372,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -383,6 +381,9 @@ background-repeat: no-repeat;
        </widget>
       </item>
      </layout>
+     <zorder>label_38</zorder>
+     <zorder>label_39</zorder>
+     <zorder>label_37</zorder>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_6">
      <property name="geometry">
@@ -409,23 +410,7 @@ background-repeat: no-repeat;
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>80</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pb_pic_cancel">
+       <widget class="QPushButton" name="pb_edit_cancel">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -441,7 +426,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -479,7 +463,7 @@ border-radius: 5px
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_pic_share">
+       <widget class="QPushButton" name="pb_edit_ok">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -495,7 +479,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -515,11 +498,11 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Share</string>
+         <string>OK</string>
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/resources/icons/share.png</normaloff>:/resources/icons/share.png</iconset>
+          <normaloff>:/resources/icons/ok.png</normaloff>:/resources/icons/ok.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -531,22 +514,6 @@ border-radius: 5px
          <bool>false</bool>
         </property>
        </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>80</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
@@ -561,64 +528,30 @@ border-radius: 5px
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_28">
       <item>
-       <widget class="QLabel" name="label_40">
+       <widget class="QLabel" name="label_5">
         <property name="font">
          <font>
-          <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
         <property name="text">
-         <string/>
+         <string>Message</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label_41">
+       <widget class="QLineEdit" name="lineEdit_msg">
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
          </font>
-        </property>
-        <property name="autoFillBackground">
-         <bool>false</bool>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">/*image: url(:/resources/icons/finger_pointing_inverted.png); */
-/*
-background-color: rgb(186, 189, 182);
-background-repeat: no-repeat; 
-*/</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_42">
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string/>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
-   <widget class="QWidget" name="gif_opts">
+   <widget class="QWidget" name="status_opts">
     <widget class="QWidget" name="horizontalLayoutWidget_9">
      <property name="geometry">
       <rect>
@@ -635,73 +568,42 @@ background-repeat: no-repeat;
       <rect>
        <x>10</x>
        <y>0</y>
-       <width>581</width>
+       <width>813</width>
        <height>51</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_30">
       <item>
-       <widget class="QLabel" name="label_43">
+       <widget class="QLabel" name="label_8">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>60</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="font">
          <font>
-          <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
         <property name="text">
-         <string/>
+         <string>Status:</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label_44">
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="autoFillBackground">
-         <bool>false</bool>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">/*image: url(:/resources/icons/finger_pointing_inverted.png); */
-/*
-background-color: rgb(186, 189, 182);
-background-repeat: no-repeat; 
-*/</string>
-        </property>
+       <widget class="QLabel" name="label_share_status">
         <property name="text">
-         <string/>
+         <string>Post cannot be shared! Please try again later.</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QProgressBar" name="progressBar">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_45">
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string/>
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -721,23 +623,7 @@ background-repeat: no-repeat;
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <item>
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>80</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pb_gif_cancel">
+       <widget class="QPushButton" name="pb_status_cancel">
         <property name="enabled">
          <bool>true</bool>
         </property>
@@ -756,7 +642,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -795,7 +680,7 @@ border-radius: 5px
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_gif_share">
+       <widget class="QPushButton" name="pb_status_ok">
         <property name="enabled">
          <bool>true</bool>
         </property>
@@ -814,7 +699,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>16</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -834,11 +718,11 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Share</string>
+         <string>OK</string>
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/resources/icons/share.png</normaloff>:/resources/icons/share.png</iconset>
+          <normaloff>:/resources/icons/ok.png</normaloff>:/resources/icons/ok.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -850,22 +734,6 @@ border-radius: 5px
          <bool>false</bool>
         </property>
        </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>80</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
@@ -887,7 +755,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -904,7 +771,6 @@ border-radius: 5px
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -936,7 +802,6 @@ background-repeat: no-repeat;
         <property name="font">
          <font>
           <pointsize>14</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
