--- a/Proj/code/LS/LSApp/resources/style/stylesheet.qss
+++ b/Proj/code/LS/LSApp/resources/style/stylesheet.qss
@@ -1,10 +1,13 @@
-QWidget
-{
+QWidget{
 	background-color: black;
 	color: rgb(186, 189, 182);
 }
-QPushButton
-{
+QPushButton{
 	background-color: rgb(186, 189, 182);
 	color: black;
+}
+QLineEdit{
+	border-style: solid;
+    	border-width: 2px;
+    	border-color: rgb(186, 189, 182);
 }
