--- a/Proj/code/LS/LSApp/sharwindow.ui
+++ b/Proj/code/LS/LSApp/sharwindow.ui
@@ -92,7 +92,7 @@ border-radius: 5px
          </font>
         </property>
         <property name="toolTip">
-         <string>Dummy button to navigate to Normal mode view</string>
+         <string/>
         </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -145,7 +145,7 @@ border-radius: 5px
          </font>
         </property>
         <property name="toolTip">
-         <string>Dummy button to navigate to Normal mode view</string>
+         <string/>
         </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -430,7 +430,7 @@ background-repeat: no-repeat;
          </font>
         </property>
         <property name="toolTip">
-         <string>Dummy button to navigate to Normal mode view</string>
+         <string/>
         </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -483,7 +483,7 @@ border-radius: 5px
          </font>
         </property>
         <property name="toolTip">
-         <string>Dummy button to navigate to Normal mode view</string>
+         <string/>
         </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -646,7 +646,7 @@ border-radius: 5px
          </font>
         </property>
         <property name="toolTip">
-         <string>Dummy button to navigate to Normal mode view</string>
+         <string/>
         </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -703,7 +703,7 @@ border-radius: 5px
          </font>
         </property>
         <property name="toolTip">
-         <string>Dummy button to navigate to Normal mode view</string>
+         <string/>
         </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
